Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -38,20 +38,21 @@ button:hover {
     flex-direction: column;
     align-items: center;
     width: 400px;
-    height: 564px;
+    min-height: 564px;
     padding: 20px;
     gap: 18px;
 }
 
 #cal-container #display {
     width: 356px;
-    height: 120px;
+    min-height: 120px;
     padding: 20px;
     background-color: #EEEEEE;
     text-align: right;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-wrap: anywhere;
 }
 
 #cal-container #display #prev-operand {
